# sgtdv-ros_implementation

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile-gl  README.md  build_rc.sh  build_sim.sh  install_dependencies.sh  yolov3-tiny.cfg
can_setup/: enable_CAN.sh
doc/: FSSIM_testing.md  SGT-DV_Codestyle_guidelines.md
doxygen/: Doxyfile
scripts/: build_rc.sh  build_sim.sh  install_dependencies.sh
src/: SGT_Macros.h  SGT_Utils.h
src/calibration/: CMakeLists.txt  package.xml
src/calibration/data/: sensor_model_camera.csv  sensor_models_sim_camera.txt  sensor_models_sim_lidar.txt
src/calibration/include/: SensorCalibration.h  SensorCalibrationSynch.h
src/calibration/launch/: sensor_calibration.launch  sensor_calibration_rc.launch  sensor_calibration_sim.launch
src/calibration/params/: sensor_calibration.yaml  sensor_calibration_rc.yaml  sensor_calibration_sim.yaml  sensor_model_2.yaml  sensor_model_2_camera.yaml  sensor_model_2_lidar.yaml  sensor_model_3.yaml  sensor_model_3_camera.yaml  sensor_model_3_lidar.yaml  sensor_model_lidar.yaml  sensor_model_sim_1_camera.yaml  sensor_model_sim_1_lidar.yaml  sensor_model_sim_2_camera.yaml  sensor_model_sim_2_lidar.yaml
src/calibration/src/: SensorCalibration.cpp  SensorCalibrationNODE.cpp  SensorCalibrationSynch.cpp
src/camera_cone_detection/: CMakeLists.txt  Darknet_cone_detection.zip.REMOVED.git-id  README.md  package.xml
src/camera_cone_detection/Darknet_cone_detection/: comands.txt  kuzel.names  obj.data  yolov3-tiny.cfg  yolov4-tiny-3l-obj.cfg  yolov4-tiny-obj.cfg
src/camera_cone_detection/include/: CameraConeDetection.h  yolo_v2_class.hpp
src/camera_cone_detection/launch/: camera_cone_detection.launch
src/camera_cone_detection/param/: camera_cone_detection.yaml
src/camera_cone_detection/src/: CameraConeDetection.cpp  CameraConeDetectionNODE.cpp
src/debug_visualization/: CMakeLists.txt  package.xml
src/debug_visualization/include/: DebugVisualization.h
src/debug_visualization/src/: DebugVisualization.cpp  DebugVisualizationNODE.cpp
src/fusion/: CMakeLists.txt  README.md  package.xml
src/fusion/config/: fusion_rc.yaml  fusion_sim.yaml
src/fusion/include/: Fusion.h  FusionKF.h  FusionSynch.h  Messages.h
src/fusion/launch/: fusion_rc.launch  fusion_sim.launch
src/fusion/params/: fusion_rc.yaml  fusion_sim.yaml  sensor_model_sim_1.yaml  sensor_model_sim_2.yaml
src/fusion/src/: Fusion.cpp  FusionKF.cpp  FusionNODE.cpp  FusionSynch.cpp
src/fusion_sim_interface/include/: FusionSimInterface.h
src/fusion_sim_interface/src/: FusionSimInterface.cpp  FusionSimInterfaceNODE.cpp
src/fusion_visualizator/: CMakeLists.txt  package.xml
src/fusion_visualizator/include/: FusionVisualizator.h
src/fusion_visualizator/launch/: fusion_rc_visualizator.launch  fusion_sim_visualizator.launch
src/fusion_visualizator/rviz/: fusion_visualizator.rviz
src/fusion_visualizator/src/: FusionVisualizator.cpp  FusionVisualizatorNODE.cpp
src/jetson_can_interface/: CMakeLists.txt  package.xml
src/jetson_can_interface/include/: JetsonCanInterface.h
src/jetson_can_interface/src/: JetsonCanInterface.cpp  JetsonCanInterfaceNODE.cpp
src/lidar_cone_detection/: CMakeLists.txt  README.md  lidar_cone_detection.rviz  package.xml
src/lidar_cone_detection/include/: LidarConeDetection.h  LidarConeDetectionSynch.h
src/lidar_cone_detection/launch/: lidar_cone_detection.launch  lidar_cone_detection_offline.launch
src/lidar_cone_detection/src/: LidarConeDetection.cpp  LidarConeDetectionNODE.cpp  LidarConeDetectionSynch.cpp
src/mapper/: CMakeLists.txt  package.xml
src/mapper/config/: mapping_conf.yaml
src/mapper/include/: mapper.h
src/mapper/include/mapper/: mapper.h
src/mapper/launch/: mapper.launch
src/mapper/src/: mapper.cpp  mapper_node.cpp
src/master/: CMakeLists.txt  package.xml
src/master/launch/: rc.launch  rc_test.launch  trackdrive_sim.launch
src/path_planning/: CMakeLists.txt  README.md  package.xml
src/path_planning/bags/: map_full.bag
src/path_planning/include/: Messages.h  PathPlanning.h  PathPlanningDisciplines.h  PathPlanningSynch.h  RRTStar.h
src/path_planning/launch/: path_planning.launch  path_planning_rc.launch  path_planning_rosbag.launch  path_planning_sim.launch
src/path_planning/params/: path_planning_rc.yaml  path_planning_sim.yaml
src/path_planning/rviz/: config.rviz
src/path_planning/src/: PathPlanning.cpp  PathPlanningDisciplines.cpp  PathPlanningNODE.cpp  PathPlanningSynch.cpp  RRTStar.cpp
src/path_planning_visualizator/: CMakeLists.txt  package.xml
src/path_planning_visualizator/include/: PathPlanningVisualizator.h
src/path_planning_visualizator/src/: PathPlanningVisualizator.cpp  PathPlanningVisualizatorNODE.cpp
src/path_tracking/: CMakeLists.txt  README.md  package.xml  path_tracking_multiplot.xml
src/path_tracking/include/: Messages.h  PathTracking.h  PathTrackingSynch.h  PurePursuit.h  TrackingAlgorithms.h
src/path_tracking/launch/: path_tracking.launch  path_tracking_rc.launch  path_tracking_sim.launch
src/path_tracking/params/: path_tracking.yaml  path_tracking_rc.yaml  path_tracking_sim.yaml
src/path_tracking/rviz/: path_tracking.rviz
src/path_tracking/src/: PathTracking.cpp  PathTrackingNODE.cpp  PathTrackingSynch.cpp  TrackingAlgorithms.cpp
src/pose_estimate/: CMakeLists.txt  package.xml
src/pose_estimate/include/: PoseEstimate.h
src/pose_estimate/src/: PoseEstimate.cpp  PoseEstimateNODE.cpp
src/ptp_trajectory/: CMakeLists.txt  package.xml
src/ptp_trajectory/include/: PTPtrajectory.h
src/ptp_trajectory/src/: PTPtrajectory.cpp  PTPtrajectoryNODE.cpp
src/ptp_trajectory/srv/: GoRectangle.srv  SetTarget.srv
src/robot_localization/launch/: ekf_rc.launch
src/robot_localization/params/: ekf_rc.yaml
src/sensors_visualizator/: CMakeLists.txt  package.xml
src/sensors_visualizator/include/: SensorsVisualizator.h
src/sensors_visualizator/launch/: sensors_rc_visualizator.launch  sensors_sim_visualizator.launch  sensors_visualizator.launch  sensors_visualizator_camera.launch  (+1 more)
(+7 files in other folders)
